# eerlijke-indeling

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  Readme.md
.github/workflows/: main.yml
contrib/: download-wasm-pack.sh
src/: lib.rs
src/components/: category_block.rs  category_row.rs  external.rs  match_result_block.rs  mod.rs  modal.rs  student_block.rs  student_row.rs
static/: index.html
static/css/: custom.css
