[package]
authors = ["Delirious Penguin <deliriouspenguin@protonmail.com>"]
edition = "2018"
name = "matchmaker_ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.11"
matchmaker = {version = "0.1.0"}
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
serde = {version = "1.0.115", features = ["derive"]}
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.44", features = ["FormData", "HtmlFormElement", "Event", "EventTarget", "DataTransfer", "MouseEvent", "DomTokenList"]}
yew = "0.17"
